# twitter-clone

./: Main.java  docker-compose.yml  readme.md
.github/workflows/: build.yml
backend/: .env.dev  Procfile  db.sqlite3  pyproject.toml  requirements.txt
backend/follows/migrations/: 0001_initial.py  0002_initial.py
backend/follows/models/: follows_models.py
backend/follows/tests/: follows_test.py
backend/follows/viewsets/: follows_viewset.py
backend/login/: admin.py  urls.py
backend/login/migrations/: 0001_initial.py
backend/login/models/: user_model.py
backend/login/serializers/: token_serializer.py  user_serializer.py
backend/login/tests/: user_test.py
backend/login/viewsets/: logout_views.py  token_views.py  user_views.py
backend/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/notifications/models/: notification_models.py
backend/notifications/serializers/: notifications_serializer.py
backend/notifications/tests/: notifications_test.py
backend/notifications/viewsets/: notifications_viewset.py
backend/tweets/migrations/: 0001_initial.py
backend/tweets/models/: tweet_model.py
backend/tweets/serializers/: tweets_serializer.py
backend/tweets/tests/: tweets_test.py
backend/tweets/viewsets/: tweets_viewset.py
backend/twitter_clone/: settings.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: user_models.py
backend/users/serializers/: user_serializer.py
backend/users/tests/: user_test.py
backend/users/viewsets/: user_viewset.py
frontend/twitter_clone/: package.json  (+1 more)
(+13 files in other folders)
